--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 /* Classes used throughout the page */
-.popup {
-
+#popover1 {
+    width: 20px;
+    height: 50px;
+    background: red;
+    display: none;
 }
 
-.popup:hover {
-
+.active {
+    display: inline;
 }
 
 .sticky {
@@ -31,8 +34,8 @@ body {
 #navbar {
     width: 960px;
     height: 130px;
-    background: #e2ddd9;
-    opacity: 0.5;
+    background: #4f5765;
+    opacity: 0.8;
     position: fixed;
     left: calc(50% - 480px);
     z-index: 20;
@@ -220,7 +223,7 @@ body {
 /* Content of the Page */
 #content-container {
     width: 960px;
-    height: 10000px;
+    height: 3700px;
     margin: 0 auto;
     /*transform: translateY(-60px);*/
 }
@@ -271,7 +274,7 @@ body {
     background: #e2ddd9;
     opacity: 0.8;
     margin: 0 auto;
-    transform: translateY(-40px);
+    transform: translateY(-175px);
     z-index: -1;
 }
 
@@ -282,7 +285,7 @@ body {
     transform: translateY(-130px);
 }
 
-#more {
+/*#more {
     width: 215px;
     height: 40px;
     background: #f7f5f2;
@@ -290,6 +293,26 @@ body {
     position: relative;
     z-index: 1000;
 
+}*/
+
+#more {
+    width: 215px;
+    height: 40px;
+    background: #f7f5f2;
+    margin: 0 auto;
+    position: relative;
+    transform: translateY(625px);
+    z-index: 1000;
+}
+
+#some {
+    width: 215px;
+    height: 95px;
+    background: #f7f5f2;
+    margin: 0 auto;
+    position: relative;
+    transform: translateY(1246px);
+    z-index: 2000;
 }
 
 #intro_content {
@@ -311,11 +334,11 @@ body {
 
 #idea {
   width: 800px;
-  height: 670px;
+  height: 660px;
   background: #4f5765;
   opacity: 0.8;
   margin: 0 auto;
-  transform: translateY(-40px);
+  transform: translateY(-175px);
 }
 
 #idea-content {
@@ -358,7 +381,8 @@ body {
     width: 940px;
     height: 1000px;
     margin: 20px;
-    transform: scale(0.8);
+    transform: translateY(400px) scale(0.8);
+
 }
 
 #age {
@@ -407,6 +431,98 @@ body {
 
 #portfolio {
     width: 800px;
+    height: 800px;
+    position: relative;
+    margin: 0 auto;
+    transform: translateY(-127px);
 }
 
-#portfolio
+#myportfolio {
+    width: 540px;
+    margin: 0 auto;
+}
+
+#portfolio-content {
+  width: 800px;
+  margin: 0 auto;
+  position: absolute;
+}
+
+.button {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #505765;
+    margin: 25px;
+}
+
+#b3 {
+    margin: 30px;
+}
+
+#b4 {
+    margin: 30px;
+}
+
+#b5 {
+    margin: 30px;
+}
+
+#b6 {
+    margin: 30px;
+}
+
+#b7 {
+    margin: 30px;
+}
+#b8 {
+    margin: 30px;
+}
+
+#graphic-design {
+    width: 40px;
+    height: 80px;
+    margin-left: 640px;
+    transform: translateY(190px);
+
+}
+
+#fine-arts {
+    width: 40px;
+    height: 240px;
+
+    margin-left: 90px;
+    transform: translateY(438px);
+}
+
+#laptop {
+    width: 500px;
+    margin-left: 30px;
+    margin-right: 15px;
+    position: absolute;
+}
+
+#photography {
+    width: 40px;
+    height: 120px;
+
+    margin-left: 640px;
+    transform: translateY(750px);
+}
+
+.artwork {
+    display: none;
+}
+
+#a1 {
+  width: 300px;
+  height: 300px;
+  background: red;
+}
+
+#bottom {
+  width: 800px;
+  height: 300px;
+  margin: 0 auto;
+  
+}
