--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ img {
 .tooltip .tooltiptext {
     visibility: hidden;
     padding: 0 5px;
-    background-color: #CAB1DA;
+    background-color: #dab;
     color: #fff;
     text-align: center;
     border-radius: 12px;
@@ -204,7 +204,7 @@ img {
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: transparent transparent #CAB1DA transparent;
+    border-color: transparent transparent #dab transparent;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
@@ -357,7 +357,8 @@ em{
 }
 
 .lavender{
-    background-color: #CAB1DA;
+    /*background-color: #dab;*/
+		background-color: #dab;
 }
 
 .magenta{
