implemented nav bar from section pages

--- a/css/style.css
+++ b/css/style.css
@@ -548,6 +548,7 @@ em{
   color: #303030;
   margin-top: 120px;
   padding-bottom: 120px;
+	position: relative;
 }
 
 @media (max-width: 1000px) {
@@ -578,7 +579,30 @@ em{
     font-family: Muli;
     margin: 15px 0;
     font-weight: 100;
-    margin-bottom: 50px;
+		margin-bottom: 100px;
+}
+
+.home {
+		background: #dab;
+		border-radius: 4px;
+		width: 30px;
+		right: 12px;
+		margin-top: 15px;
+		position: absolute;
+}
+
+.home:hover {
+		background: #F2F1F3;
+		cursor: pointer;
+}
+
+.home:hover ~ .bar_alt {
+		background: #dab;
+}
+
+.mat {
+		color: white;
+		padding: 3.5px;
 }
 
 .preview{
@@ -624,6 +648,99 @@ em{
 .right{
     margin-right: 0px;
 }
+
+.bar-cont_alt {
+    width: 30px;
+}
+
+.bar_alt {
+    width: 30px;
+    height: 4px;
+		background-color: #dab;
+    margin-bottom: 4px;
+    border-radius: 1px;
+}
+
+/* Style The Dropdown Button */
+.dropbtn_alt {
+    color: white;
+    font-size: 14px;
+		padding: 0 12px;
+    border: none;
+    cursor: pointer;
+    width: 30px;
+    color: #303030;
+		border-radius: 4px;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown_alt {
+    position: absolute;
+    right: 0;
+    z-index: 2;
+}
+
+.point_alt {
+		width: 0;
+		height: 0;
+		margin-left: 127px;
+		border-left: 8px solid transparent;
+		border-right: 8px solid transparent;
+		border-bottom: 12px solid #F2F1F3;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content_alt {
+		margin-top: 5px;
+    display: none;
+    position: absolute;
+		right: 0;
+		text-align: right;
+    width: 160px;
+    z-index: 1;
+    transition: .3s;
+		color: #dab;
+}
+
+/* Links inside the dropdown */
+.dropdown-content_alt a {
+		font-family: Karla;
+		text-transform: uppercase;
+    padding: 10px 16px;
+    text-decoration: none;
+    display: block;
+		background-color: #F2F1F3;
+		color: lightgray;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content_alt a:hover {
+		background-color: #F5F5F5;
+		color: #dab;
+    transition: .3s;
+  }
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropbtn_alt:hover .bar_alt {
+    transition: .3s;
+		background-color: #F2F1F3;
+}
+
+.act_alt {
+		background-color: #F2F1F3;
+}
+
+.hide {
+		display: none;
+}
+
+
+
+
+
+
+
+
 
 
 
