--- a/css/style.css
+++ b/css/style.css
@@ -574,9 +574,10 @@ em{
 
 .section-title{
     width: 100%;
-    font-family: Puritan;
+    font-family: Karla;
     font-size: 24px;
     margin: 15px 0;
+		text-transform: uppercase;
 }
 
 .section-subtitle{
@@ -603,6 +604,7 @@ em{
 .home:hover {
 		background: #F2F1F3;
 		cursor: pointer;
+		transition: 0.3s;
 }
 
 .home:hover ~ .bar_alt {
@@ -640,7 +642,7 @@ em{
     cursor: pointer;
     margin-top: 0;
     position: absolute;
-    font-family: Puritan;
+    font-family: Karla;
     font-size: 24px;
     font-weight: 800;
 }
