--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ a:active {
   margin-top: -90px;
   color: #303030;
   padding-top: 90px;
+	animation: fadein 1s;
 }
 
 
@@ -145,6 +146,16 @@ img {
     top: 50%;
     transform: translate(-50%, -50%);
     image-orientation: from-image;
+		animation: fadein 2s;
+}
+
+video {
+		animation: fadein 2s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 .height {
@@ -553,6 +564,7 @@ em{
   margin-top: 120px;
   padding-bottom: 120px;
 	position: relative;
+	/*animation: fadein 1s;*/
 }
 
 @media (max-width: 1000px) {
