--- a/css/style.css
+++ b/css/style.css
@@ -622,6 +622,30 @@ em{
 		font-weight: bold;
 }
 
+.back-button {
+		width: 100%;
+		color: #E8E8E8;
+		text-align: center;
+		font-size: 26px;
+		margin: 0 0 150px 0;
+		line-height: 36px;
+		text-transform: uppercase;
+		font-family: Karla;
+		margin-bottom: 150px;
+}
+
+.eighteen {
+		font-size: 18px;
+}
+
+.buffer {
+		margin-top: 50px;
+}
+
+.back-hover:hover {
+		color: #dab;
+}
+
 .sub {
 		margin-bottom: 50px;
 }
