--- a/cal-hacks/assets/style.css
+++ b/cal-hacks/assets/style.css
@@ -7,8 +7,9 @@ body {
   justify-content: center;
   color: #3B9BC2;
   background: #A8D9F1;
-  font-family: Lato;
-  overflow-x: hidden; }
+  font-family: Muli;
+  overflow-x: hidden;
+  font-weight: 400; }
   body a:link, body a:hover, body a:visited {
     color: #3B9BC2;
     text-decoration: none; }
@@ -146,6 +147,24 @@ body {
       height: auto;
       display: table;
       width: calc(100% - 66px); }
+      body .container .section.hidden {
+        display: none; }
+      body .container .section .conduct {
+        display: inline-block;
+        font-size: 16px;
+        line-height: 40px;
+        background: #3B9BC2;
+        color: #A8D9F1;
+        border-radius: 4px;
+        padding: 0 30px;
+        font-weight: 800;
+        margin: 5px 180px;
+        width: auto;
+        cursor: pointer;
+        transition: background 0.2s ease-in-out; }
+        body .container .section .conduct:hover {
+          background: #218BB6;
+          color: #97D0ED; }
       @media (max-width: 820px) {
         body .container .section {
           padding: 10px;
@@ -316,7 +335,7 @@ body {
         display: none; } }
   body .node-3 {
     width: 103px;
-    top: 320px;
+    top: 270px;
     left: 130px; }
     @media (max-width: 1050px) {
       body .node-3 {
@@ -352,6 +371,8 @@ body {
     display: flex;
     position: relative;
     transform: translateX(-200px); }
+    body .carousel.hidden {
+      display: none; }
     @media (max-width: 1280px) {
       body .carousel {
         transform: translateX(0); } }
