--- a/cal-hacks/assets/style.css
+++ b/cal-hacks/assets/style.css
@@ -167,7 +167,7 @@ body {
           color: #97D0ED; }
         @media (max-width: 920px) {
           body .container .section .conduct {
-            margin: 8px 40px; } }
+            margin: 8px 20px; } }
         @media (max-width: 500px) {
           body .container .section .conduct {
             margin: 8px 0; } }
@@ -280,9 +280,9 @@ body {
       transition: padding 0.5s ease-in-out; }
     @media (max-width: 920px) {
       body .container h2 {
-        padding: 0 40px; }
+        padding: 0 20px; }
       body .container p {
-        padding: 0 40px; } }
+        padding: 0 20px; } }
     @media (max-width: 820px) {
       body .container h2 {
         max-width: 90%; }
@@ -468,7 +468,7 @@ body {
     padding: 0 180px; }
     @media (max-width: 920px) {
       body .faq-content {
-        padding: 0 40px;
+        padding: 0 20px;
         width: calc(100% - 80px); } }
     @media (max-width: 500px) {
       body .faq-content {
@@ -501,5 +501,77 @@ body {
     @media (max-width: 650px) {
       body .faq-content {
         flex-direction: column; } }
+  body .footer {
+    margin-top: 60px;
+    width: 100vw;
+    height: 42px;
+    padding: 12px 0;
+    background: #A8D9F1;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    transition: 0.5s ease-in-out;
+    bottom: 0; }
+    body .footer .home {
+      height: 80px;
+      width: auto;
+      position: absolute;
+      left: 0;
+      margin-top: -20px; }
+      body .footer .home img {
+        float: left;
+        height: 100%;
+        width: auto; }
+        @media (max-width: 800px) {
+          body .footer .home img#text {
+            display: none; } }
+    body .footer .links {
+      position: absolute;
+      right: 20px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end; }
+      body .footer .links .link-item {
+        font-size: 16px;
+        font-weight: 800;
+        color: #3B9BC2;
+        line-height: 32px;
+        padding: 0 4px;
+        border-radius: 4px;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        transition: background 0.2s ease-in-out; }
+        body .footer .links .link-item img {
+          background: white;
+          border-radius: 30px; }
+        body .footer .links .link-item:hover {
+          animation: spin 0.5s; }
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+        body .footer .links .link-item.apply {
+          font-size: 16px;
+          line-height: 36px;
+          background: #3B9BC2;
+          color: #A8D9F1;
+          border-radius: 4px;
+          padding: 0 30px;
+          margin: 0 0 0 15px; }
+          body .footer .links .link-item.apply:hover {
+            background: #218BB6;
+            color: #97D0ED; }
+      body .footer .links .icon {
+        font-size: 28px;
+        display: none; }
+        @media (max-width: 800px) {
+          body .footer .links .icon {
+            display: block; } }
+      body .footer .links .stretch {
+        height: 38px;
+        line-height: 38px; }
 
 /*# sourceMappingURL=style.css.map */
