--- a/cal-hacks/assets/style.css
+++ b/cal-hacks/assets/style.css
@@ -1,6 +1,9 @@
 @font-face {
   font-family: Abadi;
   src: url("./fonts/abadi.ttf"); }
+html {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+
 body {
   margin: 0;
   display: flex;
@@ -10,10 +13,13 @@ body {
   font-family: Muli;
   overflow-x: hidden;
   font-weight: 400; }
-  body a:link, body a:hover, body a:visited {
+  body a:link, body a:hover, body a:visited, body a:focus {
     color: #3B9BC2;
-    text-decoration: none; }
-    body a:link:active, body a:hover:active, body a:visited:active {
+    text-decoration: none;
+    outline: 0;
+    background: transparent;
+    -webkit-tap-highlight-color: #ccc; }
+    body a:link:active, body a:hover:active, body a:visited:active, body a:focus:active {
       background: #80C8DF; }
   body #mlh-trust-badge {
     margin-top: -13px;
@@ -270,6 +276,14 @@ body {
       max-width: 400px;
       padding: 0 180px;
       transition: padding 0.5s ease-in-out; }
+    body .container ul {
+      font-family: Muli;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 26px;
+      max-width: 475px;
+      padding: 0 180px;
+      transition: padding 0.5s ease-in-out; }
     body .container p {
       font-family: Muli;
       font-size: 16px;
@@ -281,15 +295,22 @@ body {
     @media (max-width: 920px) {
       body .container h2 {
         padding: 0 20px; }
+      body .container ul {
+        padding: 0 20px; }
       body .container p {
         padding: 0 20px; } }
     @media (max-width: 820px) {
       body .container h2 {
         max-width: 90%; }
+      body .container ul {
+        max-width: 90%; }
       body .container p {
         max-width: 90%; } }
     @media (max-width: 500px) {
       body .container h2 {
+        padding: 0;
+        font-size: 20px; }
+      body .container ul {
         padding: 0;
         font-size: 20px; }
       body .container p {
