--- a/cal-hacks/assets/style.scss
+++ b/cal-hacks/assets/style.scss
@@ -32,6 +32,8 @@ $breakpoints: (
   src: url('./fonts/abadi.ttf');
 }
 
+html { -webkit-tap-highlight-color: rgba(0,0,0,0); }
+
 body {
   margin: 0;
   display: flex;
@@ -43,9 +45,12 @@ body {
   font-weight: 400;
 
   a {
-    &:link, &:hover, &:visited {
+    &:link, &:hover, &:visited, &:focus {
       color: get(oasis);
       text-decoration: none;
+      outline: 0;
+      background: transparent;
+      -webkit-tap-highlight-color:#ccc;
 
       &:active {
         background: get(french);
@@ -371,6 +376,16 @@ body {
       transition: padding 0.5s ease-in-out;
     }
 
+    ul {
+      font-family: Muli;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 26px;
+      max-width: 475px;
+      padding: 0 180px;
+      transition: padding 0.5s ease-in-out;
+    }
+
     p {
       font-family: Muli;
       font-size: 16px;
@@ -383,16 +398,19 @@ body {
 
     @media (max-width: breakpoint(large)) {
       h2 { padding: 0 20px; }
+      ul { padding: 0 20px; }
       p { padding: 0 20px; }
     }
 
     @media (max-width: 820px) {
       h2 { max-width: 90%; }
+      ul { max-width: 90%; }
       p { max-width: 90%; }
     }
 
     @media (max-width: breakpoint(small)) {
       h2 { padding: 0; font-size: 20px; }
+      ul { padding: 0; font-size: 20px; }
       p { padding: 0; font-size: 16px; }
     }
   }
