--- a/cal-hacks/assets/style.css
+++ b/cal-hacks/assets/style.css
@@ -2,7 +2,8 @@
   font-family: Abadi;
   src: url("./fonts/abadi.ttf"); }
 html {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  overflow-x: hidden; }
 
 body {
   margin: 0;
@@ -436,11 +437,12 @@ body {
     background-image: url("./images/dust.png");
     background-size: 80% 100%;
     background-repeat: no-repeat;
-    background-position: center; }
+    background-position: center;
+    margin-top: 66px; }
     @media (max-width: 920px) {
       body #sponsor, body #faq {
         background-size: 100% 100%;
-        margin-top: 40px;
+        margin-top: 66px;
         background-color: #EDF6FA;
         border-radius: 8px;
         background-image: none; } }
