--- a/cal-hacks/assets/style.scss
+++ b/cal-hacks/assets/style.scss
@@ -32,7 +32,7 @@ $breakpoints: (
   src: url('./fonts/abadi.ttf');
 }
 
-html { -webkit-tap-highlight-color: rgba(0,0,0,0); }
+html { -webkit-tap-highlight-color: rgba(0,0,0,0); overflow-x: hidden; }
 
 body {
   margin: 0;
@@ -582,10 +582,11 @@ body {
     background-size: 80% 100%;
     background-repeat: no-repeat;
     background-position: center;
+    margin-top: 66px;
 
     @media (max-width: 920px) {
       background-size: 100% 100%;
-      margin-top: 40px;
+      margin-top: 66px;
       background-color: get(dust);
       border-radius: 8px;
       background-image: none;
