--- a/cal-hacks/assets/style.scss
+++ b/cal-hacks/assets/style.scss
@@ -160,6 +160,10 @@ body {
           padding: 0 30px;
           margin: 0 0 0 15px;
 
+          @media (max-width: 800px) {
+            display: none;
+          }
+
           &:hover {
             background: get(lazuli);
             color: get(cornflower);
@@ -250,6 +254,11 @@ body {
         cursor: pointer;
         transition: background 0.2s ease-in-out;
 
+        &.sponsor {
+          color: get(dark_dust);
+          display: inline-block;
+        }
+
         &:hover {
           background: get(lazuli);
           color: get(cornflower);
@@ -265,7 +274,7 @@ body {
       }
 
       @media (max-width: 820px) {
-        padding: 10px;
+        padding: 66px 10px 0 10px;
         width: calc(100% - 40px);
 
         &#home {
@@ -503,7 +512,7 @@ body {
 
   .node-5 {
     width: 93px;
-    top: -50px;
+    top: -200px;
     left: 0;
 
     @media (max-width: 920px) {
@@ -513,7 +522,7 @@ body {
 
   .node-6 {
     width: 120px;
-    top: 0;
+    top: -100px;
     right: 80px;
 
     @media (max-width: 920px) {
@@ -582,11 +591,10 @@ body {
     background-size: 80% 100%;
     background-repeat: no-repeat;
     background-position: center;
-    margin-top: 66px;
+    margin-top: 30px;
 
     @media (max-width: 920px) {
       background-size: 100% 100%;
-      margin-top: 66px;
       background-color: get(dust);
       border-radius: 8px;
       background-image: none;
@@ -603,6 +611,12 @@ body {
 
       h2 { padding: 0 20px; }
       p { padding: 0 20px; }
+
+      .conduct {
+        &.sponsor {
+          margin: 0 20px;
+        }
+      }
     }
 
     .logo-grid {
@@ -610,7 +624,6 @@ body {
       position: relative;
       width: calc(100% - 60px);
       max-width: 600px;
-      height: 500px;
       transform: translate(-20px, 0);
 
       @media (max-width: breakpoint(small)) {
@@ -682,12 +695,17 @@ body {
       }
 
       .question {
-        font-weight: 600;
+        font-weight: 800;
+        display: inline-block;
+        border-bottom: 3px solid get(dust);
+        color: get(lazuli);
+        font-size: 18px;
       }
 
       .answer {
         font-weight: 400;
-        padding: 6px 0;
+        padding: 8px 0;
+        font-size: 16px;
       }
     }
 
